<resources>
    <string name="app_name">Backcountry Check-In</string>

    <!-- Blank Trip List -->
    <string name="blank_dialog_icon">Add</string>
    <string name="blank_dialog_add">Tap To Create A Trip</string>

    <!-- Trip List -->
    <string name="trip_list_add">New Trip</string>
    <string name="trip_list_item_default">Trip Name Goes Here</string>
    <string name="trip_list_starred_description">Starred Trip</string>
    <string name="trip_list_activity_description">Activity Type</string>
    <string name="trip_list_time_description">Activity Time</string>
    <string name="trip_list_alarm_description">Activity Alarm</string>

    <!-- Partner dialog -->
    <string name="partner_list_item_default">Partner Name Goes Here</string>
    <string name="partners_all">Select Partners:</string>

    <!-- Navigation Menu -->
    <string name="nav_partners">Partner List</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_help">Help and Feedback</string>
    <string name="nav_bug">Report a Problem</string>

    <string name="nav_profile_name">Brian K</string>
    <string name="nav_profile_email">rotten.brian@gmail.com</string>

    <!-- Main Menu -->
    <string name="main_menu_add">Add Trip</string>
    <string name="main_menu_sort">Sort</string>
    <string name="sort_title">By Title</string>
    <string name="sort_activity">By Activity</string>
    <string name="sort_favourites_top">Favourites on Top</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_about">About</string>
    <string name="main_menu_admin">Admin</string>
    <string name="main_menu_delete">Delete Database</string>
    <string name="main_menu_create">Create Database</string>
    <string name="main_menu_dump">Dump Database to Log.d</string>

    <!-- Context Menu (Hold Item) -->
    <string name="context_menu_send">Send Trip</string>
    <string name="context_menu_edit">Edit Trip</string>
    <string name="context_menu_delete">Delete Trip</string>

    <!-- Trip Menu -->
    <string name="trip_save">Save</string>
    <string name="trip_menu_edit">Edit</string>
    <string name="trip_menu_delete">Delete</string>
    <string name="trip_menu_send">Send</string>
    <string name="trip_menu_detail">View</string>
    <string name="trip_detail_cancel">Cancel</string>

    <!-- Trip Dialog -->
    <string name="trip_dialog_activity">Activity</string>
    <string name="trip_dialog_map">Map</string>

    <!-- New Trip Dialog -->
    <string name="new_dialog_title">New Trip Title:</string>
    <string name="new_dialog_title_hint">Trip Title</string>


    <!-- About Dialog -->
    <string name="about_dialog_icon">icon</string>
    <string name="about_dialog_text">A simple way to give friends and family details about your backcountry adventure.\n\nIn the case of emergency, they can pass this information on to the police, search and rescue, or park rangers and staff.</string>
    <string name="about_dialog_web_icon">Web Icon</string>
    <string name="about_dialog_web">http://backcountrycheckin.com</string>
    <string name="about_dialog_email">backcountry.checkin@gmail.com</string>
    <string name="about_dialog_ok">Ok</string>

    <!-- Trip Editor -->
    <string name="trip_edit_title">Edit Trip</string>

    <!-- Trip Details -->
    <string name="detail_season_img">STOLEN FROM GIS</string>
    <string name="detail_gradient">white gradient</string>
    <string name="detail_title_hint">Trip Title</string>
    <string name="detail_start">START:</string>
    <string name="detail_date_hint">00 DEC 0000</string>
    <string name="detail_time_hint">00:00</string>
    <string name="detail_end">   END:  </string>
    <string name="detail_who">WHO:</string>
    <string name="detail_who_hint">List of Names</string>
    <string name="detail_what">WHAT:</string>
    <string-array name="activities_array">
        <item>Mountain Biking</item>
        <item>Skiing</item>
        <item>Hiking</item>
        <item>Snowshoeing</item>
        <item>Trail Running</item>
        <item>Other</item>
    </string-array>
    <string name="detail_where">WHERE:</string>
    <string name="detail_where_hint">Location Name</string>
    <string name="detail_map_img">screen cap</string>
    <string name="detail_notes">" Notes:"</string>

    <!-- Trip attributes -->
    <string name="trip_attr_icon">Icon For Trip Attribute</string>
    <string name="trip_map">STOLEN FROM TRAILFORKS</string>
    <string name="trip_title_default">Trip Name</string>
    <string name="trip_who_default">Who</string>
    <string name="trip_spinner_drop">drop</string>
    <string name="trip_where_default">Where</string>
    <string name="trip_when_start_default">Sat Oct 22  06:00</string>
    <string name="trip_when_end_default">Sat Oct 22  16:30</string>
    <string name="trip_when_panic_default">Sat Oct 22  21:00</string>
    <string name="trip_notes">  Notes:</string>

    <!-- App Settings -->
    <string name="settings_default_email_label">Send Email To:</string>
    <string name="settings_default_email_address">backcountry.checkin@gmail.com</string>
    <string name="settings_save_button">Save</string>
    <string name="settings_cancel_button">Cancel</string>

    <!-- Confirm Yes/No -->
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>

    <!-- User Settings -->
    <string name="user_set_name">Name</string>
    <string name="user_set_recipient">Default Recipient</string>

    <!-- Partner Chooser -->
    <string name="partner_ok">Ok</string>
    <string name="partner_cancel">Cancel</string>


</resources>
