<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.brianmk.simplecheck_in.MainActivity">

    <group android:id="@+id/menu_group_user">
        <item
            android:id="@+id/main_menu_add"
            android:orderInCategory="100"
            android:title="@string/main_menu_add"/>
        <item
            android:orderInCategory="200"
            android:titleCondensed="Areas"
            android:title="@string/main_menu_sort"
            android:enabled="true">
            <menu
                android:id="@+id/main_menu_sort">
                <item
                    android:id="@+id/sort_title"
                    android:title="@string/sort_title"/>
                <item
                    android:id="@+id/sort_activity"
                    android:title="@string/sort_activity"/>
            </menu>
        </item>
        <item
            android:id="@+id/main_menu_settings"
            android:orderInCategory="400"
            android:title="@string/main_menu_settings"/>
        <item
            android:id="@+id/main_menu_about"
            android:orderInCategory="500"
            android:title="@string/main_menu_about"/>
    </group>

    <group android:id="@+id/menu_group_admin">
        <item
            android:visible="true"
            android:id="@+id/m_area"
            android:titleCondensed="Areas"
            android:title="@string/main_menu_admin"
            android:enabled="true"
            android:orderInCategory="1000">
            <menu>
                <item
                    android:id="@+id/main_menu_dump"
                    android:orderInCategory="1100"
                    android:title="@string/main_menu_dump" />
                <item
                    android:id="@+id/main_menu_create_db"
                    android:orderInCategory="1300"
                    android:title="@string/main_menu_create"/>
                <item
                    android:id="@+id/main_menu_delete_db"
                    android:orderInCategory="1500"
                    android:title="@string/main_menu_delete"/>
            </menu>
        </item>
    </group>


</menu>
