<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/dialog_where"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:text="@string/trip_title_default"/>

    <TextView
        android:id="@+id/dialog_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:text="@string/trip_when_start_default"/>

    <TextView
        android:id="@+id/dialog_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/dark_green"
        android:text="@string/trip_when_end_default"/>

    <ImageView
        android:id="@+id/dialog_map"
        android:layout_width="@dimen/map_thumb_size"
        android:layout_height="@dimen/map_thumb_size"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/border"
        android:src="@drawable/stand_by"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/dialog_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_menu_send"
            android:onClick="sendTrip"/>

        <Button
            android:id="@+id/dialog_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/dialog_send"
            android:text="@string/trip_menu_edit"
            android:onClick="editTrip"/>
    </RelativeLayout>


</LinearLayout>