<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textSize="@dimen/detail_title_font_size"
        android:textStyle="bold"
        android:textColor="@color/olive"
        android:text="@string/new_dialog_title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/detail_title_font_size"
        android:hint="@string/new_dialog_title_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/new_trip_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_dialog_ok"/>

    </LinearLayout>

</LinearLayout>