<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.NavigationView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigation_drawer"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:choiceMode="singleChoice"
    android:divider="@android:color/transparent"
    android:dividerHeight="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/detail_season_img"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:src="@drawable/summer"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-120dp"
            android:layout_marginTop="-230dp"
            android:scaleX=".15"
            android:scaleY=".15"
            android:src="@drawable/profile"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-120dp"
            android:layout_marginStart="5dp"
            android:textSize="@dimen/nav_profile_font"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/nav_profile_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="@dimen/nav_profile_font"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/nav_profile_email"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:text="@string/nav_partners"
            android:drawableStart="@drawable/ic_group_black_24dp"
            android:drawablePadding="20dp"
            android:drawableTint="@color/colorAccent"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/border"
            android:backgroundTint="@color/light_grey"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:text="@string/nav_settings"
            android:drawableStart="@drawable/ic_settings_black_24dp"
            android:drawableTint="@color/colorAccent"
            android:drawablePadding="20dp" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/border"
            android:backgroundTint="@color/light_grey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/border"
                android:backgroundTint="@color/light_grey"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:text="@string/nav_help"
                android:drawableStart="@drawable/ic_help_outline_black_24dp"
                android:drawableTint="@color/colorAccent"
                android:drawablePadding="20dp" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:text="@string/nav_about"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/ic_info_outline_black_24dp"
                android:drawableTint="@color/colorAccent"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:text="@string/nav_bug"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/ic_report_problem_black_24dp"
                android:drawableTint="@color/colorAccent"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.NavigationView>
