<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="@dimen/detail_title_font_size"
        android:textStyle="bold"
        android:textColor="@color/olive"
        android:text="@string/partners_all"/>
    <ListView
        android:id="@+id/partner_list"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_margin="15dp"
        android:dividerHeight="1dp"
        android:divider="@color/colorAccent"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/border">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/partner_list_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/partner_ok"/>

        <Button
            android:id="@+id/partner_list_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/partner_cancel"/>
    </LinearLayout>

</LinearLayout>